<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resultEdit"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/ButtonRow01"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button07"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_07" />

            <Button
                android:id="@+id/button08"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_08" />

            <Button
                android:id="@+id/button09"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_09"
                android:textAlignment="center" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_div" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow02"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_04" />

            <Button
                android:id="@+id/button05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_05" />

            <Button
                android:id="@+id/button06"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_06" />

            <Button
                android:id="@+id/buttonMult"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_mul"
                android:textColorLink="#D76666" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow03"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_01" />

            <Button
                android:id="@+id/button02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_02" />

            <Button
                android:id="@+id/button03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickNumericalButton"
                android:text="@string/button_03" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_add" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonRow04"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_ce" />

            <Button
                android:id="@+id/button00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_00" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="onClickFunctionButton"
                android:text="@string/button_sub" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonEq"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="onClickFunctionButton"
            android:text="@string/button_eq" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>